--- a/langchain_project/pyproject.toml
+++ b/langchain_project/pyproject.toml
@@ -11,6 +11,11 @@ dependencies = [
     "pathlib>=1.0.1",
     "pillow>=11.2.1",
     "psycopg2>=2.9.10",
+    "pydantic>=2.11.4",
     "pytesseract>=0.3.13",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "requests>=2.32.3",
+    "sqlalchemy>=2.0.41",
+    "sqlmodel>=0.0.24",
 ]
